Bearbeitung der zweiten Aufgabe "Grenzwerte von Funktionen"

--- a/EA1/EA1_final.ipynb
+++ b/EA1/EA1_final.ipynb
@@ -120,7 +120,44 @@
    "id": "d595469a",
    "metadata": {},
    "source": [
-    "<span style=\"color:blue\">\n",
+    "<style>\n",
+    "   pre {\n",
+    "       background-color: #f5f5f5;\n",
+    "       color: #37474f;\n",
+    "       padding: 10px;\n",
+    "       border-radius: 6px;\n",
+    "       font-family: Consolas, monospace;\n",
+    "       font-size: 15px;\n",
+    "       overflow-x: auto;\n",
+    "   }\n",
+    "\n",
+    "   div.infobox {\n",
+    "       background-color: #eef7f1;\n",
+    "       color: #2e7d32;\n",
+    "       padding: 12px;\n",
+    "       border-left: 5px solid #81c784;\n",
+    "       border-radius: 6px;\n",
+    "       margin: 12px 0;\n",
+    "   }\n",
+    "\n",
+    "   blockquote {\n",
+    "       background-color: #fdf2e9;\n",
+    "       color: #8d6e63;\n",
+    "       padding: 12px;\n",
+    "       border-left: 5px solid #ffb74d;\n",
+    "       border-radius: 6px;\n",
+    "       margin: 12px 0;\n",
+    "       font-style: italic;\n",
+    "   }\n",
+    "\n",
+    "   div {\n",
+    "       background-color: #f3f4f6;\n",
+    "       color: #4f5b62;\n",
+    "       padding: 12px;\n",
+    "       border-radius: 6px;\n",
+    "       margin: 12px 0;\n",
+    "   }\n",
+    "</style>\n",
     "\n",
     "## Numerische Genauigkeit von verschiedenen Additionsverfahren\n",
     "\n",
@@ -133,7 +170,6 @@
     "sum_forward = np.float64(1.0)\n",
     "sum_reverse = np.float64(1.00000000000001)\n",
     "```\n",
-    "\n",
     "Diese Unterschiede entstehen durch **Rundungsfehler** in der **Gleitkommadarstellung**, die auf der begrenzten Anzahl an Bits basiert, mit der reale Zahlen intern im Computer dargestellt werden.\n",
     "\n",
     "---\n",
@@ -300,11 +336,10 @@
     "\n",
     "```python\n",
     "def mindest_mantissenbits(x, y):\n",
-    "    return abs(np.log2(x) - np.log2(y))\n",
+    "   return abs(np.log2(x) - np.log2(y))\n",
     "\n",
     "mindest_mantissenbits(1, 1e-16) < 52  # False → nicht exakt addierbar\n",
-    "```\n",
-    "</span>"
+    "```"
    ]
   },
   {
@@ -329,7 +364,44 @@
    "id": "fd9ede3d",
    "metadata": {},
    "source": [
-    "<span style=\"color:blue\">\n",
+    "<style>\n",
+    "   pre {\n",
+    "       background-color: #f5f5f5;\n",
+    "       color: #37474f;\n",
+    "       padding: 10px;\n",
+    "       border-radius: 6px;\n",
+    "       font-family: Consolas, monospace;\n",
+    "       font-size: 15px;\n",
+    "       overflow-x: auto;\n",
+    "   }\n",
+    "\n",
+    "   div.infobox {\n",
+    "       background-color: #eef7f1;\n",
+    "       color: #2e7d32;\n",
+    "       padding: 12px;\n",
+    "       border-left: 5px solid #81c784;\n",
+    "       border-radius: 6px;\n",
+    "       margin: 12px 0;\n",
+    "   }\n",
+    "\n",
+    "   blockquote {\n",
+    "       background-color: #fdf2e9;\n",
+    "       color: #8d6e63;\n",
+    "       padding: 12px;\n",
+    "       border-left: 5px solid #ffb74d;\n",
+    "       border-radius: 6px;\n",
+    "       margin: 12px 0;\n",
+    "       font-style: italic;\n",
+    "   }\n",
+    "\n",
+    "   div {\n",
+    "       background-color: #f3f4f6;\n",
+    "       color: #4f5b62;\n",
+    "       padding: 12px;\n",
+    "       border-radius: 6px;\n",
+    "       margin: 12px 0;\n",
+    "   }\n",
+    "</style>\n",
     "\n",
     "## Kaskadensummation\n",
     "\n",
@@ -340,8 +412,7 @@
     "NumPy verwendet für die Addition von Arrays ein Verfahren namens **Kaskadensummation** oder **paarweise Summation**. Dieses Verfahren reduziert Rundungsfehler im Vergleich zur sequentiellen Summation und führt in vielen Fällen zu einer höheren Genauigkeit. `np.sum()` kann interne Optimierungen verwenden, wie z. B. parallelisierte Summation, abhängig von der Größe des Arrays und der Hardware. In modernen Implementierungen von NumPy wird oft die `np.add.reduce()` Funktion verwendet, um die Summation durchzuführen, die im Hintergrund mit dem `ufunc`-Mechanismus arbeitet. Diese `reduce`-Methode summiert die Werte sequenziell, aber auch sie optimiert den Prozess, indem sie die Reihenfolge der Summanden variiert oder bei Bedarf parallelisiert.\n",
     "\n",
     "\n",
-    "Mehr Informationen zu dieser Technik gibt es auf [Wikipedia](https://en.wikipedia.org/wiki/Pairwise_summation) und in der [NumPy-Dokumentation](https://numpy.org/doc/stable/reference/generated/numpy.sum.html).\n",
-    "\n"
+    "Mehr Informationen zu dieser Technik gibt es auf [Wikipedia](https://en.wikipedia.org/wiki/Pairwise_summation) und in der [NumPy-Dokumentation](https://numpy.org/doc/stable/reference/generated/numpy.sum.html)."
    ]
   },
   {
@@ -394,15 +465,51 @@
     }
    },
    "source": [
-    "<span style=\"color:blue\">\n",
+    "<style>\n",
+    "   pre {\n",
+    "       background-color: #f5f5f5;\n",
+    "       color: #37474f;\n",
+    "       padding: 10px;\n",
+    "       border-radius: 6px;\n",
+    "       font-family: Consolas, monospace;\n",
+    "       font-size: 15px;\n",
+    "       overflow-x: auto;\n",
+    "   }\n",
+    "\n",
+    "   div.infobox {\n",
+    "       background-color: #eef7f1;\n",
+    "       color: #2e7d32;\n",
+    "       padding: 12px;\n",
+    "       border-left: 5px solid #81c784;\n",
+    "       border-radius: 6px;\n",
+    "       margin: 12px 0;\n",
+    "   }\n",
+    "\n",
+    "   blockquote {\n",
+    "       background-color: #fdf2e9;\n",
+    "       color: #8d6e63;\n",
+    "       padding: 12px;\n",
+    "       border-left: 5px solid #ffb74d;\n",
+    "       border-radius: 6px;\n",
+    "       margin: 12px 0;\n",
+    "       font-style: italic;\n",
+    "   }\n",
+    "\n",
+    "   div {\n",
+    "       background-color: #f3f4f6;\n",
+    "       color: #4f5b62;\n",
+    "       padding: 12px;\n",
+    "       border-radius: 6px;\n",
+    "       margin: 12px 0;\n",
+    "   }\n",
+    "</style>\n",
+    "\n",
+    "\n",
     "<h2>Berechnung der Funktion f(x) = (exp(x) - 1) / x </h2>\n",
-    "</span>\n",
     "\n",
+    "In dieser Aufgabe soll die Funktion f(x) für x = 10<sup>-1</sup>, 10<sup>-2</sup>, ..., 10<sup>-15</sup> berechnet werden. Danach soll die Funktion für noch kleinere Werte von x, nämlich x = 10<sup>-16</sup>, 10<sup>-17</sup>, ..., 10<sup>-20</sup>, berechnet werden. \n",
     "\n",
-    "<span style=\"color:blue\">\n",
-    "In dieser Aufgabe soll die Funktion f(x) für x = 10<sup>-1</sup>, 10<sup>-2</sup>, ..., 10<sup>-15</sup> berechnet werden. Danach soll die Funktion für noch kleinere Werte von x, nämlich x = 10<sup>-16</sup>, 10<sup>-17</sup>, ..., 10<sup>-20</sup>, berechnet werden. Der Grenzwert der Funktion für x → 0 ist 1. Dabei sollen mögliche numerische Probleme bei sehr kleinen x beobachtet werden.\n",
-    "\n",
-    "</span>\n"
+    "Der Grenzwert der Funktion für x → 0 ist 1. Dabei sollen mögliche numerische Probleme bei sehr kleinen x beobachtet werden."
    ]
   },
   {
@@ -525,7 +632,46 @@
    "id": "746bd18f",
    "metadata": {},
    "source": [
-    "<span style=\"color:blue\">\n",
+    "<style>\n",
+    "   pre {\n",
+    "       background-color: #f5f5f5;\n",
+    "       color: #37474f;\n",
+    "       padding: 10px;\n",
+    "       border-radius: 6px;\n",
+    "       font-family: Consolas, monospace;\n",
+    "       font-size: 15px;\n",
+    "       overflow-x: auto;\n",
+    "   }\n",
+    "\n",
+    "   div.infobox {\n",
+    "       background-color: #eef7f1;\n",
+    "       color: #2e7d32;\n",
+    "       padding: 12px;\n",
+    "       border-left: 5px solid #81c784;\n",
+    "       border-radius: 6px;\n",
+    "       margin: 12px 0;\n",
+    "   }\n",
+    "\n",
+    "   blockquote {\n",
+    "       background-color: #fdf2e9;\n",
+    "       color: #8d6e63;\n",
+    "       padding: 12px;\n",
+    "       border-left: 5px solid #ffb74d;\n",
+    "       border-radius: 6px;\n",
+    "       margin: 12px 0;\n",
+    "       font-style: italic;\n",
+    "   }\n",
+    "\n",
+    "   div {\n",
+    "       background-color: #f3f4f6;\n",
+    "       color: #4f5b62;\n",
+    "       padding: 12px;\n",
+    "       border-radius: 6px;\n",
+    "       margin: 12px 0;\n",
+    "   }\n",
+    "</style>\n",
+    "\n",
+    "\n",
     "<h2> Erklärung des Verhaltens der Funktion bei kleinen x-Werten </h2>\n",
     "\n",
     "Für Werte von x zwischen `1e-01` bis `1e-14` liefert die Funktion erwartungsgemäß Ergebnisse nahe bei **1**. Ab etwa 1e-15 treten jedoch drastische Änderungen auf, die durch Rundungsfehler bei der Berechnung von `e^x - 1` bedingt sind. Besonders bei sehr kleinen x-Werten wird der Unterschied zwischen `e^x` und `1` auf dem Computer nicht mehr erkennbar, was zu fehlerhaften Ergebnissen führt. Eine stabilere Berechnung kann durch die Verwendung der Funktion `np.expm1(x)` von NumPy erreicht werden.\n",
@@ -559,9 +705,7 @@
     "\n",
     "<h3> Lösung: Stabilere Berechnung mit NumPy </h3>\n",
     "\n",
-    "NumPy bietet mit `np.expm1(x)` eine spezielle Funktion an, die den Ausdruck `exp(x) - 1` **numerisch stabiler** berechnet – insbesondere für sehr kleine `x`.\n",
-    "\n",
-    "</span>"
+    "NumPy bietet mit `np.expm1(x)` eine spezielle Funktion an, die den Ausdruck `exp(x) - 1` **numerisch stabiler** berechnet – insbesondere für sehr kleine `x`."
    ]
   },
   {
@@ -598,6 +742,104 @@
     "for x_val, fx in zip(input_numbers_3, result_limits_3):\n",
     "# Die Anwendung von zip gibt einen Iterator zurück, der in der Lage ist Tupel zu erzeugen\n",
     "    print(f\"x = {x_val:.0e}, f(x) = {fx}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88f8269b",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "   pre {\n",
+    "       background-color: #f5f5f5;\n",
+    "       color: #37474f;\n",
+    "       padding: 10px;\n",
+    "       border-radius: 6px;\n",
+    "       font-family: Consolas, monospace;\n",
+    "       font-size: 15px;\n",
+    "       overflow-x: auto;\n",
+    "   }\n",
+    "\n",
+    "   div.infobox {\n",
+    "       background-color: #eef7f1;\n",
+    "       color: #2e7d32;\n",
+    "       padding: 12px;\n",
+    "       border-left: 5px solid #81c784;\n",
+    "       border-radius: 6px;\n",
+    "       margin: 12px 0;\n",
+    "   }\n",
+    "\n",
+    "   blockquote {\n",
+    "       background-color: #fdf2e9;\n",
+    "       color: #8d6e63;\n",
+    "       padding: 12px;\n",
+    "       border-left: 5px solid #ffb74d;\n",
+    "       border-radius: 6px;\n",
+    "       margin: 12px 0;\n",
+    "       font-style: italic;\n",
+    "   }\n",
+    "\n",
+    "   div {\n",
+    "       background-color: #f3f4f6;\n",
+    "       color: #4f5b62;\n",
+    "       padding: 12px;\n",
+    "       border-radius: 6px;\n",
+    "       margin: 12px 0;\n",
+    "   }\n",
+    "</style>\n",
+    "\n",
+    "## Detaillierte Erklärung der Gleitkommadarstellung und Rundungsfehler\n",
+    "\n",
+    "Die Präzision einer Gleitpunktzahl hängt von der Mantisse ab. Diese bildet neben dem Exponenten, der Basis und dem Vorzeichen die Gleitpunktzahl.\n",
+    "\n",
+    "Solange man nicht explizit davon abweicht, wird `float64` in Python und NumPy verwendet für Gleitpunktzahlen.\n",
+    "\n",
+    "- Eine `float32`-Mantisse besteht aus 23 Bit und eine `float64`-Mantisse aus 52 Bit (bei 64 Bit bleiben noch 11 Bit für den Exponenten und 1 Bit für das Vorzeichen).\n",
+    "\n",
+    "Werden Werte, die mehr Bits zur Darstellung benötigen als die Mantisse zur Verfügung stellt, kommt es zu Rundungsfehlern, wie in den folgenden Beispielen erklärt.\n",
+    "\n",
+    "## Fazit zur Gleitkommadarstellung und Rundungsfehlern\n",
+    "\n",
+    "Die Präzision von Gleitkommazahlen ist durch die Anzahl der Bits in der Mantisse begrenzt, was zu Rundungsfehlern führt, wenn Zahlen mit mehr erforderlichen Bits dargestellt werden müssen. Besonders bei sehr kleinen Werten kann dies zu Verlusten an Genauigkeit führen, die sich durch den Einsatz stabiler Berechnungsmethoden wie z. B. `np.expm1(x)` verhindern lassen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4601e17a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def mindest_mantissenbits(x, y):\n",
+    "    # Berechnet die Anzahl der benötigten Mantissenbits für eine korrekte Berechnung\n",
+    "    return np.float128(abs(np.float128(np.float128(np.log2(np.float128(x)))-np.float128(np.log2(np.float128(y))))))\n",
+    "\n",
+    "# Beispiel zur Darstellbarkeit float32\n",
+    "x = 1\n",
+    "y = np.float128(2**24-2)\n",
+    "x+y, np.float32(x+y), \"darstellbar:\", mindest_mantissenbits(x,y) < 23 + 1\n",
+    "#Ergebnis: ...\n",
+    "\n",
+    "# Beispiel zur Darstellbarkeit float64\n",
+    "z = np.float128(2**53-2)\n",
+    "x+z, np.float64(x+z), \"darstellbar:\", mindest_mantissenbits(x,z) < 52 + 1\n",
+    "#Ergebnis: ...\n",
+    "\n",
+    "# Diese Beispiele verdeutlichen, wie die Genauigkeit und die Darstellung von Zahlen durch die verwendete Gleitkommadarstellung beeinflusst werden.\n",
+    "\n",
+    "# Weitere Beispiele zur Rundungsfehlerdarstellung\n",
+    "# In den folgenden Beispielen wird die Auswirkung von kleinen Zahlen in Gleitkommadarstellungen demonstriert:\n",
+    "\n",
+    "# Beispiel 1 + 1e-16, vorkommend bei Summierung in Schleife von vorne\n",
+    "a = np.float128(1e-16)\n",
+    "x + a, np.float64(x + a), \"darstellbar:\", mindest_mantissenbits(x, a) < 52 + 1\n",
+    "#Ergebnis: ...\n",
+    "\n",
+    "# Beispiel 1 + 1e-16 * 100, vorkommend bei Summierung in Schleife von hinten\n",
+    "y = np.float128(1e-16 * 100)\n",
+    "x + b, np.float64(x + b), \"darstellbar:\", mindest_mantissenbits(x, b) < 52 + 1\n",
+    "#Ergebnis: ..."
    ]
   },
   {
