div-Elemente ergänzt

--- a/EA1/EA1_final.ipynb
+++ b/EA1/EA1_final.ipynb
@@ -159,6 +159,8 @@
     "   }\n",
     "</style>\n",
     "\n",
+    "<div>\n",
+    "\n",
     "## Numerische Genauigkeit von verschiedenen Additionsverfahren\n",
     "\n",
     "### Unterschiede in der Summierung\n",
@@ -339,7 +341,9 @@
     "   return abs(np.log2(x) - np.log2(y))\n",
     "\n",
     "mindest_mantissenbits(1, 1e-16) < 52  # False → nicht exakt addierbar\n",
-    "```"
+    "```\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -403,6 +407,8 @@
     "   }\n",
     "</style>\n",
     "\n",
+    "<div>\n",
+    "\n",
     "## Kaskadensummation\n",
     "\n",
     "Paarweise Summation (auch Kaskadensummation genannt) ist ein numerisch besseres Verfahren, bei dem die Werte in mehreren Schritten summiert werden. Dies bedeutet, dass Werte mit ähnlichen Größen zuerst zusammengefasst werden. Dadurch wird der Fehler reduziert, der entstehen kann, wenn immer kleinere Zahlen zu einem sehr großen Wert hinzugefügt werden (wie es bei der sequentiellen Summation der Fall wäre).\n",
@@ -412,7 +418,9 @@
     "NumPy verwendet für die Addition von Arrays ein Verfahren namens **Kaskadensummation** oder **paarweise Summation**. Dieses Verfahren reduziert Rundungsfehler im Vergleich zur sequentiellen Summation und führt in vielen Fällen zu einer höheren Genauigkeit. `np.sum()` kann interne Optimierungen verwenden, wie z. B. parallelisierte Summation, abhängig von der Größe des Arrays und der Hardware. In modernen Implementierungen von NumPy wird oft die `np.add.reduce()` Funktion verwendet, um die Summation durchzuführen, die im Hintergrund mit dem `ufunc`-Mechanismus arbeitet. Diese `reduce`-Methode summiert die Werte sequenziell, aber auch sie optimiert den Prozess, indem sie die Reihenfolge der Summanden variiert oder bei Bedarf parallelisiert.\n",
     "\n",
     "\n",
-    "Mehr Informationen zu dieser Technik gibt es auf [Wikipedia](https://en.wikipedia.org/wiki/Pairwise_summation) und in der [NumPy-Dokumentation](https://numpy.org/doc/stable/reference/generated/numpy.sum.html)."
+    "Mehr Informationen zu dieser Technik gibt es auf [Wikipedia](https://en.wikipedia.org/wiki/Pairwise_summation) und in der [NumPy-Dokumentation](https://numpy.org/doc/stable/reference/generated/numpy.sum.html).\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -505,11 +513,15 @@
     "</style>\n",
     "\n",
     "\n",
+    "<div>\n",
+    "\n",
     "<h2>Berechnung der Funktion f(x) = (exp(x) - 1) / x </h2>\n",
     "\n",
     "In dieser Aufgabe soll die Funktion f(x) für x = 10<sup>-1</sup>, 10<sup>-2</sup>, ..., 10<sup>-15</sup> berechnet werden. Danach soll die Funktion für noch kleinere Werte von x, nämlich x = 10<sup>-16</sup>, 10<sup>-17</sup>, ..., 10<sup>-20</sup>, berechnet werden. \n",
     "\n",
-    "Der Grenzwert der Funktion für x → 0 ist 1. Dabei sollen mögliche numerische Probleme bei sehr kleinen x beobachtet werden."
+    "Der Grenzwert der Funktion für x → 0 ist 1. Dabei sollen mögliche numerische Probleme bei sehr kleinen x beobachtet werden.\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -671,6 +683,7 @@
     "   }\n",
     "</style>\n",
     "\n",
+    "<div>\n",
     "\n",
     "<h2> Erklärung des Verhaltens der Funktion bei kleinen x-Werten </h2>\n",
     "\n",
@@ -705,7 +718,9 @@
     "\n",
     "<h3> Lösung: Stabilere Berechnung mit NumPy </h3>\n",
     "\n",
-    "NumPy bietet mit `np.expm1(x)` eine spezielle Funktion an, die den Ausdruck `exp(x) - 1` **numerisch stabiler** berechnet – insbesondere für sehr kleine `x`."
+    "NumPy bietet mit `np.expm1(x)` eine spezielle Funktion an, die den Ausdruck `exp(x) - 1` **numerisch stabiler** berechnet – insbesondere für sehr kleine `x`.\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -788,6 +803,8 @@
     "   }\n",
     "</style>\n",
     "\n",
+    "<div>\n",
+    "\n",
     "## Detaillierte Erklärung der Gleitkommadarstellung und Rundungsfehler\n",
     "\n",
     "Die Präzision einer Gleitpunktzahl hängt von der Mantisse ab. Diese bildet neben dem Exponenten, der Basis und dem Vorzeichen die Gleitpunktzahl.\n",
@@ -800,7 +817,9 @@
     "\n",
     "## Fazit zur Gleitkommadarstellung und Rundungsfehlern\n",
     "\n",
-    "Die Präzision von Gleitkommazahlen ist durch die Anzahl der Bits in der Mantisse begrenzt, was zu Rundungsfehlern führt, wenn Zahlen mit mehr erforderlichen Bits dargestellt werden müssen. Besonders bei sehr kleinen Werten kann dies zu Verlusten an Genauigkeit führen, die sich durch den Einsatz stabiler Berechnungsmethoden wie z. B. `np.expm1(x)` verhindern lassen."
+    "Die Präzision von Gleitkommazahlen ist durch die Anzahl der Bits in der Mantisse begrenzt, was zu Rundungsfehlern führt, wenn Zahlen mit mehr erforderlichen Bits dargestellt werden müssen. Besonders bei sehr kleinen Werten kann dies zu Verlusten an Genauigkeit führen, die sich durch den Einsatz stabiler Berechnungsmethoden wie z. B. `np.expm1(x)` verhindern lassen.\n",
+    "\n",
+    "</div>"
    ]
   },
   {
