custom css hinzugefügt

--- a/EA1/EA1_final.ipynb
+++ b/EA1/EA1_final.ipynb
@@ -159,6 +159,8 @@
     "   }\n",
     "</style>\n",
     "\n",
+    "<link rel=\"stylesheet\" href=\"custom.css\">\n",
+    "\n",
     "<div>\n",
     "\n",
     "## Numerische Genauigkeit von verschiedenen Additionsverfahren\n",
