Bearbeitung des letzten Codes für Aufgabe "Grenzwerte von Funktionen"

--- a/EA1/EA1_final.ipynb
+++ b/EA1/EA1_final.ipynb
@@ -120,48 +120,7 @@
    "id": "d595469a",
    "metadata": {},
    "source": [
-    "<style>\n",
-    "   pre {\n",
-    "       background-color: #f5f5f5;\n",
-    "       color: #37474f;\n",
-    "       padding: 10px;\n",
-    "       border-radius: 6px;\n",
-    "       font-family: Consolas, monospace;\n",
-    "       font-size: 15px;\n",
-    "       overflow-x: auto;\n",
-    "   }\n",
-    "\n",
-    "   div.infobox {\n",
-    "       background-color: #eef7f1;\n",
-    "       color: #2e7d32;\n",
-    "       padding: 12px;\n",
-    "       border-left: 5px solid #81c784;\n",
-    "       border-radius: 6px;\n",
-    "       margin: 12px 0;\n",
-    "   }\n",
-    "\n",
-    "   blockquote {\n",
-    "       background-color: #fdf2e9;\n",
-    "       color: #8d6e63;\n",
-    "       padding: 12px;\n",
-    "       border-left: 5px solid #ffb74d;\n",
-    "       border-radius: 6px;\n",
-    "       margin: 12px 0;\n",
-    "       font-style: italic;\n",
-    "   }\n",
-    "\n",
-    "   div {\n",
-    "       background-color: #f3f4f6;\n",
-    "       color: #4f5b62;\n",
-    "       padding: 12px;\n",
-    "       border-radius: 6px;\n",
-    "       margin: 12px 0;\n",
-    "   }\n",
-    "</style>\n",
-    "\n",
     "<link rel=\"stylesheet\" href=\"custom.css\">\n",
-    "\n",
-    "<div>\n",
     "\n",
     "## Numerische Genauigkeit von verschiedenen Additionsverfahren\n",
     "\n",
@@ -343,9 +302,7 @@
     "   return abs(np.log2(x) - np.log2(y))\n",
     "\n",
     "mindest_mantissenbits(1, 1e-16) < 52  # False → nicht exakt addierbar\n",
-    "```\n",
-    "\n",
-    "</div>"
+    "```"
    ]
   },
   {
@@ -370,46 +327,7 @@
    "id": "fd9ede3d",
    "metadata": {},
    "source": [
-    "<style>\n",
-    "   pre {\n",
-    "       background-color: #f5f5f5;\n",
-    "       color: #37474f;\n",
-    "       padding: 10px;\n",
-    "       border-radius: 6px;\n",
-    "       font-family: Consolas, monospace;\n",
-    "       font-size: 15px;\n",
-    "       overflow-x: auto;\n",
-    "   }\n",
-    "\n",
-    "   div.infobox {\n",
-    "       background-color: #eef7f1;\n",
-    "       color: #2e7d32;\n",
-    "       padding: 12px;\n",
-    "       border-left: 5px solid #81c784;\n",
-    "       border-radius: 6px;\n",
-    "       margin: 12px 0;\n",
-    "   }\n",
-    "\n",
-    "   blockquote {\n",
-    "       background-color: #fdf2e9;\n",
-    "       color: #8d6e63;\n",
-    "       padding: 12px;\n",
-    "       border-left: 5px solid #ffb74d;\n",
-    "       border-radius: 6px;\n",
-    "       margin: 12px 0;\n",
-    "       font-style: italic;\n",
-    "   }\n",
-    "\n",
-    "   div {\n",
-    "       background-color: #f3f4f6;\n",
-    "       color: #4f5b62;\n",
-    "       padding: 12px;\n",
-    "       border-radius: 6px;\n",
-    "       margin: 12px 0;\n",
-    "   }\n",
-    "</style>\n",
-    "\n",
-    "<div>\n",
+    "<link rel=\"stylesheet\" href=\"custom.css\">\n",
     "\n",
     "## Kaskadensummation\n",
     "\n",
@@ -420,9 +338,7 @@
     "NumPy verwendet für die Addition von Arrays ein Verfahren namens **Kaskadensummation** oder **paarweise Summation**. Dieses Verfahren reduziert Rundungsfehler im Vergleich zur sequentiellen Summation und führt in vielen Fällen zu einer höheren Genauigkeit. `np.sum()` kann interne Optimierungen verwenden, wie z. B. parallelisierte Summation, abhängig von der Größe des Arrays und der Hardware. In modernen Implementierungen von NumPy wird oft die `np.add.reduce()` Funktion verwendet, um die Summation durchzuführen, die im Hintergrund mit dem `ufunc`-Mechanismus arbeitet. Diese `reduce`-Methode summiert die Werte sequenziell, aber auch sie optimiert den Prozess, indem sie die Reihenfolge der Summanden variiert oder bei Bedarf parallelisiert.\n",
     "\n",
     "\n",
-    "Mehr Informationen zu dieser Technik gibt es auf [Wikipedia](https://en.wikipedia.org/wiki/Pairwise_summation) und in der [NumPy-Dokumentation](https://numpy.org/doc/stable/reference/generated/numpy.sum.html).\n",
-    "\n",
-    "</div>"
+    "Mehr Informationen zu dieser Technik gibt es auf [Wikipedia](https://en.wikipedia.org/wiki/Pairwise_summation) und in der [NumPy-Dokumentation](https://numpy.org/doc/stable/reference/generated/numpy.sum.html).\n"
    ]
   },
   {
@@ -475,55 +391,13 @@
     }
    },
    "source": [
-    "<style>\n",
-    "   pre {\n",
-    "       background-color: #f5f5f5;\n",
-    "       color: #37474f;\n",
-    "       padding: 10px;\n",
-    "       border-radius: 6px;\n",
-    "       font-family: Consolas, monospace;\n",
-    "       font-size: 15px;\n",
-    "       overflow-x: auto;\n",
-    "   }\n",
-    "\n",
-    "   div.infobox {\n",
-    "       background-color: #eef7f1;\n",
-    "       color: #2e7d32;\n",
-    "       padding: 12px;\n",
-    "       border-left: 5px solid #81c784;\n",
-    "       border-radius: 6px;\n",
-    "       margin: 12px 0;\n",
-    "   }\n",
-    "\n",
-    "   blockquote {\n",
-    "       background-color: #fdf2e9;\n",
-    "       color: #8d6e63;\n",
-    "       padding: 12px;\n",
-    "       border-left: 5px solid #ffb74d;\n",
-    "       border-radius: 6px;\n",
-    "       margin: 12px 0;\n",
-    "       font-style: italic;\n",
-    "   }\n",
-    "\n",
-    "   div {\n",
-    "       background-color: #f3f4f6;\n",
-    "       color: #4f5b62;\n",
-    "       padding: 12px;\n",
-    "       border-radius: 6px;\n",
-    "       margin: 12px 0;\n",
-    "   }\n",
-    "</style>\n",
-    "\n",
-    "\n",
-    "<div>\n",
+    "<link rel=\"stylesheet\" href=\"custom.css\">\n",
     "\n",
     "<h2>Berechnung der Funktion f(x) = (exp(x) - 1) / x </h2>\n",
     "\n",
     "In dieser Aufgabe soll die Funktion f(x) für x = 10<sup>-1</sup>, 10<sup>-2</sup>, ..., 10<sup>-15</sup> berechnet werden. Danach soll die Funktion für noch kleinere Werte von x, nämlich x = 10<sup>-16</sup>, 10<sup>-17</sup>, ..., 10<sup>-20</sup>, berechnet werden. \n",
     "\n",
-    "Der Grenzwert der Funktion für x → 0 ist 1. Dabei sollen mögliche numerische Probleme bei sehr kleinen x beobachtet werden.\n",
-    "\n",
-    "</div>"
+    "Der Grenzwert der Funktion für x → 0 ist 1. Dabei sollen mögliche numerische Probleme bei sehr kleinen x beobachtet werden."
    ]
   },
   {
@@ -646,46 +520,7 @@
    "id": "746bd18f",
    "metadata": {},
    "source": [
-    "<style>\n",
-    "   pre {\n",
-    "       background-color: #f5f5f5;\n",
-    "       color: #37474f;\n",
-    "       padding: 10px;\n",
-    "       border-radius: 6px;\n",
-    "       font-family: Consolas, monospace;\n",
-    "       font-size: 15px;\n",
-    "       overflow-x: auto;\n",
-    "   }\n",
-    "\n",
-    "   div.infobox {\n",
-    "       background-color: #eef7f1;\n",
-    "       color: #2e7d32;\n",
-    "       padding: 12px;\n",
-    "       border-left: 5px solid #81c784;\n",
-    "       border-radius: 6px;\n",
-    "       margin: 12px 0;\n",
-    "   }\n",
-    "\n",
-    "   blockquote {\n",
-    "       background-color: #fdf2e9;\n",
-    "       color: #8d6e63;\n",
-    "       padding: 12px;\n",
-    "       border-left: 5px solid #ffb74d;\n",
-    "       border-radius: 6px;\n",
-    "       margin: 12px 0;\n",
-    "       font-style: italic;\n",
-    "   }\n",
-    "\n",
-    "   div {\n",
-    "       background-color: #f3f4f6;\n",
-    "       color: #4f5b62;\n",
-    "       padding: 12px;\n",
-    "       border-radius: 6px;\n",
-    "       margin: 12px 0;\n",
-    "   }\n",
-    "</style>\n",
-    "\n",
-    "<div>\n",
+    "<link rel=\"stylesheet\" href=\"custom.css\">\n",
     "\n",
     "<h2> Erklärung des Verhaltens der Funktion bei kleinen x-Werten </h2>\n",
     "\n",
@@ -720,9 +555,7 @@
     "\n",
     "<h3> Lösung: Stabilere Berechnung mit NumPy </h3>\n",
     "\n",
-    "NumPy bietet mit `np.expm1(x)` eine spezielle Funktion an, die den Ausdruck `exp(x) - 1` **numerisch stabiler** berechnet – insbesondere für sehr kleine `x`.\n",
-    "\n",
-    "</div>"
+    "NumPy bietet mit `np.expm1(x)` eine spezielle Funktion an, die den Ausdruck `exp(x) - 1` **numerisch stabiler** berechnet – insbesondere für sehr kleine `x`."
    ]
   },
   {
@@ -834,18 +667,21 @@
     "\n",
     "def mindest_mantissenbits(x, y):\n",
     "    # Berechnet die Anzahl der benötigten Mantissenbits für eine korrekte Berechnung\n",
-    "    return np.float128(abs(np.float128(np.float128(np.log2(np.float128(x)))-np.float128(np.log2(np.float128(y))))))\n",
+    "    # float128 um exaktere Praezision zu ermoeglichen\n",
+    "    return np.abs(np.log2(np.float128(x)) - np.log2(np.float128(y)))\n",
     "\n",
     "# Beispiel zur Darstellbarkeit float32\n",
+    "# Mantisse = 1 wenn dargestellte Zahl Potenz von 2, also darstellbar\n",
     "x = 1\n",
-    "y = np.float128(2**24-2)\n",
-    "x+y, np.float32(x+y), \"darstellbar:\", mindest_mantissenbits(x,y) < 23 + 1\n",
-    "#Ergebnis: ...\n",
+    "a = np.float128(2**24-1)\n",
+    "x+a, np.float32(x+a), \"darstellbar?:\", mindest_mantissenbits(x,a) < 23 + 1\n",
+    "# Ergebnis: (16777216.0, 16777216.0, 'darstellbar?:', True)\n",
     "\n",
-    "# Beispiel zur Darstellbarkeit float64\n",
-    "z = np.float128(2**53-2)\n",
-    "x+z, np.float64(x+z), \"darstellbar:\", mindest_mantissenbits(x,z) < 52 + 1\n",
-    "#Ergebnis: ...\n",
+    "# Beispiel zur Darstellbarkeit float32\n",
+    "# Dargestellte Zahl muss hier mit Mantisse von Mindestlaenge 24 dargestellt werden, nicht moeglich bei float32\n",
+    "b = np.float128(2**24)\n",
+    "x+b, np.float64(x+b), \"darstellbar?:\", mindest_mantissenbits(x,b) < 23 + 1\n",
+    "# Ergebnis: (16777217.0, 16777216.0, 'darstellbar?:', False)\n",
     "\n",
     "# Diese Beispiele verdeutlichen, wie die Genauigkeit und die Darstellung von Zahlen durch die verwendete Gleitkommadarstellung beeinflusst werden.\n",
     "\n",
@@ -853,14 +689,14 @@
     "# In den folgenden Beispielen wird die Auswirkung von kleinen Zahlen in Gleitkommadarstellungen demonstriert:\n",
     "\n",
     "# Beispiel 1 + 1e-16, vorkommend bei Summierung in Schleife von vorne\n",
-    "a = np.float128(1e-16)\n",
-    "x + a, np.float64(x + a), \"darstellbar:\", mindest_mantissenbits(x, a) < 52 + 1\n",
-    "#Ergebnis: ...\n",
+    "c = np.float128(1e-16)\n",
+    "x + c, np.float64(x + c), \"darstellbar?:\", mindest_mantissenbits(x, c) < 52 + 1\n",
+    "# Ergebnis: (1.0000000000000001, 1.0, 'darstellbar?:', False)\n",
     "\n",
     "# Beispiel 1 + 1e-16 * 100, vorkommend bei Summierung in Schleife von hinten\n",
-    "y = np.float128(1e-16 * 100)\n",
-    "x + b, np.float64(x + b), \"darstellbar:\", mindest_mantissenbits(x, b) < 52 + 1\n",
-    "#Ergebnis: ..."
+    "d = np.float128(1e-16 * 100)\n",
+    "x + d, np.float64(x + d), \"darstellbar?:\", mindest_mantissenbits(x, d) < 52 + 1\n",
+    "# Ergebnis: (1.00000000000001, 1.00000000000001, 'darstellbar?:', True)"
    ]
   },
   {
