inline-Styles in einem div-Element für die Markdown-Zellen eingeführt und custom.css gelöscht

--- a/EA1/EA1_final.ipynb
+++ b/EA1/EA1_final.ipynb
@@ -120,7 +120,8 @@
    "id": "d595469a",
    "metadata": {},
    "source": [
-    "<link rel=\"stylesheet\" href=\"custom.css\">\n",
+    "<div style=\"background-color: #f5f5f5; color: #37474f; padding: 20px; border-radius: 10px;\">\n",
+    "\n",
     "\n",
     "## Numerische Genauigkeit von verschiedenen Additionsverfahren\n",
     "\n",
@@ -302,7 +303,9 @@
     "   return abs(np.log2(x) - np.log2(y))\n",
     "\n",
     "mindest_mantissenbits(1, 1e-16) < 52  # False → nicht exakt addierbar\n",
-    "```"
+    "```\n",
+    "\n",
+    "<div>"
    ]
   },
   {
@@ -327,7 +330,8 @@
    "id": "fd9ede3d",
    "metadata": {},
    "source": [
-    "<link rel=\"stylesheet\" href=\"custom.css\">\n",
+    "<div style=\"background-color: #f5f5f5; color: #37474f; padding: 20px; border-radius: 10px;\">\n",
+    "\n",
     "\n",
     "## Kaskadensummation\n",
     "\n",
@@ -338,7 +342,9 @@
     "NumPy verwendet für die Addition von Arrays ein Verfahren namens **Kaskadensummation** oder **paarweise Summation**. Dieses Verfahren reduziert Rundungsfehler im Vergleich zur sequentiellen Summation und führt in vielen Fällen zu einer höheren Genauigkeit. `np.sum()` kann interne Optimierungen verwenden, wie z. B. parallelisierte Summation, abhängig von der Größe des Arrays und der Hardware. In modernen Implementierungen von NumPy wird oft die `np.add.reduce()` Funktion verwendet, um die Summation durchzuführen, die im Hintergrund mit dem `ufunc`-Mechanismus arbeitet. Diese `reduce`-Methode summiert die Werte sequenziell, aber auch sie optimiert den Prozess, indem sie die Reihenfolge der Summanden variiert oder bei Bedarf parallelisiert.\n",
     "\n",
     "\n",
-    "Mehr Informationen zu dieser Technik gibt es auf [Wikipedia](https://en.wikipedia.org/wiki/Pairwise_summation) und in der [NumPy-Dokumentation](https://numpy.org/doc/stable/reference/generated/numpy.sum.html).\n"
+    "Mehr Informationen zu dieser Technik gibt es auf [Wikipedia](https://en.wikipedia.org/wiki/Pairwise_summation) und in der [NumPy-Dokumentation](https://numpy.org/doc/stable/reference/generated/numpy.sum.html).\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -391,13 +397,15 @@
     }
    },
    "source": [
-    "<link rel=\"stylesheet\" href=\"custom.css\">\n",
+    "<div style=\"background-color: #f5f5f5; color: #37474f; padding: 20px; border-radius: 10px;\">\n",
     "\n",
     "<h2>Berechnung der Funktion f(x) = (exp(x) - 1) / x </h2>\n",
     "\n",
     "In dieser Aufgabe soll die Funktion f(x) für x = 10<sup>-1</sup>, 10<sup>-2</sup>, ..., 10<sup>-15</sup> berechnet werden. Danach soll die Funktion für noch kleinere Werte von x, nämlich x = 10<sup>-16</sup>, 10<sup>-17</sup>, ..., 10<sup>-20</sup>, berechnet werden. \n",
     "\n",
-    "Der Grenzwert der Funktion für x → 0 ist 1. Dabei sollen mögliche numerische Probleme bei sehr kleinen x beobachtet werden."
+    "Der Grenzwert der Funktion für x → 0 ist 1. Dabei sollen mögliche numerische Probleme bei sehr kleinen x beobachtet werden.\n",
+    "\n",
+    "<div>"
    ]
   },
   {
@@ -520,7 +528,7 @@
    "id": "746bd18f",
    "metadata": {},
    "source": [
-    "<link rel=\"stylesheet\" href=\"custom.css\">\n",
+    "<div style=\"background-color: #f5f5f5; color: #37474f; padding: 20px; border-radius: 10px;\">\n",
     "\n",
     "<h2> Erklärung des Verhaltens der Funktion bei kleinen x-Werten </h2>\n",
     "\n",
@@ -555,7 +563,9 @@
     "\n",
     "<h3> Lösung: Stabilere Berechnung mit NumPy </h3>\n",
     "\n",
-    "NumPy bietet mit `np.expm1(x)` eine spezielle Funktion an, die den Ausdruck `exp(x) - 1` **numerisch stabiler** berechnet – insbesondere für sehr kleine `x`."
+    "NumPy bietet mit `np.expm1(x)` eine spezielle Funktion an, die den Ausdruck `exp(x) - 1` **numerisch stabiler** berechnet – insbesondere für sehr kleine `x`.\n",
+    "\n",
+    "<div>"
    ]
   },
   {
@@ -599,46 +609,7 @@
    "id": "88f8269b",
    "metadata": {},
    "source": [
-    "<style>\n",
-    "   pre {\n",
-    "       background-color: #f5f5f5;\n",
-    "       color: #37474f;\n",
-    "       padding: 10px;\n",
-    "       border-radius: 6px;\n",
-    "       font-family: Consolas, monospace;\n",
-    "       font-size: 15px;\n",
-    "       overflow-x: auto;\n",
-    "   }\n",
-    "\n",
-    "   div.infobox {\n",
-    "       background-color: #eef7f1;\n",
-    "       color: #2e7d32;\n",
-    "       padding: 12px;\n",
-    "       border-left: 5px solid #81c784;\n",
-    "       border-radius: 6px;\n",
-    "       margin: 12px 0;\n",
-    "   }\n",
-    "\n",
-    "   blockquote {\n",
-    "       background-color: #fdf2e9;\n",
-    "       color: #8d6e63;\n",
-    "       padding: 12px;\n",
-    "       border-left: 5px solid #ffb74d;\n",
-    "       border-radius: 6px;\n",
-    "       margin: 12px 0;\n",
-    "       font-style: italic;\n",
-    "   }\n",
-    "\n",
-    "   div {\n",
-    "       background-color: #f3f4f6;\n",
-    "       color: #4f5b62;\n",
-    "       padding: 12px;\n",
-    "       border-radius: 6px;\n",
-    "       margin: 12px 0;\n",
-    "   }\n",
-    "</style>\n",
-    "\n",
-    "<div>\n",
+    "<div style=\"background-color: #f5f5f5; color: #37474f; padding: 20px; border-radius: 10px;\">\n",
     "\n",
     "## Detaillierte Erklärung der Gleitkommadarstellung und Rundungsfehler\n",
     "\n",
