padding: 20px und border-radius: 10px gelöscht

--- a/EA1/EA1_final.ipynb
+++ b/EA1/EA1_final.ipynb
@@ -120,7 +120,7 @@
    "id": "d595469a",
    "metadata": {},
    "source": [
-    "<div style=\"background-color: #f5f5f5; color: #37474f; padding: 20px; border-radius: 10px;\">\n",
+    "<div style=\"background-color: #f5f5f5; color: #37474f\">\n",
     "\n",
     "\n",
     "## Numerische Genauigkeit von verschiedenen Additionsverfahren\n",
@@ -330,7 +330,7 @@
    "id": "fd9ede3d",
    "metadata": {},
    "source": [
-    "<div style=\"background-color: #f5f5f5; color: #37474f; padding: 20px; border-radius: 10px;\">\n",
+    "<div style=\"background-color: #f5f5f5; color: #37474f\">\n",
     "\n",
     "\n",
     "## Kaskadensummation\n",
@@ -397,7 +397,7 @@
     }
    },
    "source": [
-    "<div style=\"background-color: #f5f5f5; color: #37474f; padding: 20px; border-radius: 10px;\">\n",
+    "<div style=\"background-color: #f5f5f5; color: #37474f\">\n",
     "\n",
     "<h2>Berechnung der Funktion f(x) = (exp(x) - 1) / x </h2>\n",
     "\n",
@@ -528,7 +528,7 @@
    "id": "746bd18f",
    "metadata": {},
    "source": [
-    "<div style=\"background-color: #f5f5f5; color: #37474f; padding: 20px; border-radius: 10px;\">\n",
+    "<div style=\"background-color: #f5f5f5; color: #37474f\">\n",
     "\n",
     "<h2> Erklärung des Verhaltens der Funktion bei kleinen x-Werten </h2>\n",
     "\n",
@@ -609,7 +609,7 @@
    "id": "88f8269b",
    "metadata": {},
    "source": [
-    "<div style=\"background-color: #f5f5f5; color: #37474f; padding: 20px; border-radius: 10px;\">\n",
+    "<div style=\"background-color: #f5f5f5; color: #37474f\">\n",
     "\n",
     "## Detaillierte Erklärung der Gleitkommadarstellung und Rundungsfehler\n",
     "\n",
